@@ -1,3 +1,7 @@
+2010-11-04  Alan Modra  <amodra@gmail.com>
+
+	* plugin.c (is_ir_dummy_bfd): Don't segfault on NULL abfd.
+
 2010-11-03  Nick Clifton  <nickc@redhat.com>
 
 	PR ld/12001
